--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,13 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
           <version>${plugin.gpg.version}</version>
+          <configuration>
+            <gpgArguments>
+              <gpgArgument>--batch</gpgArgument>
+              <gpgArgument>--pinentry-mode</gpgArgument>
+              <gpgArgument>loopback</gpgArgument>
+            </gpgArguments>
+          </configuration>
         </plugin>
 
         <plugin>
