--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
   under the License.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.jpmsilva.ppmp</groupId>
@@ -33,7 +34,7 @@
 
   <inceptionYear>2017</inceptionYear>
 
-  <url>https://jpmsilva.github.io/pom-properties-maven-plugin/</url>
+  <url>https://jpmsilva.github.io/pom-properties-maven-plugin-site</url>
 
   <issueManagement>
     <url>https://github.com/jpmsilva/pom-properties-maven-plugin/issues</url>
@@ -76,12 +77,14 @@
     <plugin.compiler.version>3.7.0</plugin.compiler.version>
     <plugin.jar.version>3.0.2</plugin.jar.version>
     <plugin.plugin.version>3.5</plugin.plugin.version>
+    <plugin.site.version>3.6</plugin.site.version>
     <plugin.deploy.version>2.8.2</plugin.deploy.version>
     <plugin.jgitflow.version>1.0-m5.1</plugin.jgitflow.version>
     <plugin.nexus-staging.version>1.6.8</plugin.nexus-staging.version>
     <plugin.gpg.version>1.6</plugin.gpg.version>
     <plugin.source.version>3.0.1</plugin.source.version>
     <plugin.javadoc.version>3.0.0-M1</plugin.javadoc.version>
+    <plugin.github-site.version>0.12</plugin.github-site.version>
     <plugin.project-info-reports.version>2.9</plugin.project-info-reports.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -139,6 +142,34 @@
           <configuration>
             <goalPrefix>pom-properties</goalPrefix>
             <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+          </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>${plugin.site.version}</version>
+          <configuration>
+            <skipDeploy>true</skipDeploy>
+          </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>com.github.github</groupId>
+          <artifactId>site-maven-plugin</artifactId>
+          <version>${plugin.github-site.version}</version>
+          <configuration>
+            <server>github</server>
+            <message>New site version: ${project.version}</message>
+            <merge>true</merge>
+            <repositoryOwner>jpmsilva</repositoryOwner>
+            <repositoryName>pom-properties-maven-plugin-site</repositoryName>
+            <branch>master</branch>
+            <path>/</path>
+            <includes>
+              <include>**/*</include>
+            </includes>
+            <noJekyll>true</noJekyll>
           </configuration>
         </plugin>
 
@@ -233,6 +264,19 @@
             <goals>
               <goal>helpmojo</goal>
             </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>com.github.github</groupId>
+        <artifactId>site-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>site</goal>
+            </goals>
+            <phase>site-deploy</phase>
           </execution>
         </executions>
       </plugin>
